[package]
name = "leftpad-rs"
version = "1.0.1"
edition = "2018"
authors = ["Ollivier Robert <roberto@keltia.net>"]
keywords = ["leftpad", "joke"]
repository = "https://github.com/keltia/leftpad-rs"
license = "MIT"
readme = "README.md"
description = "Rust implementation of the Go Leftpad package."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rstest = "0.11.0"
